# retroconnect

./: .gitignore  CMakeLists.txt  Constants.h  Makefile  NES_SNES.ino  Ps4Controller.h  README.md  StyleGuide.md  XboxToNesConfig.txt  bluetooth.bash  compile.sh  disable_ertm.conf  main.cpp  partitions.csv  pin_colors.txt  sdkconfig  sdkconfig.old
Config/: Ps4ToNesConfig.txt  XboxToSnesConfig.txt
Mapping/ControllerConverters/: ControllerConverter.cpp  ControllerConverter.h  ControllerConverterFactory.cpp  ControllerConverterFactory.h  XboxToSnesControllerConverter.cpp
Mapping/ControllerModels/: Controller.cpp  Controller.h  SnesController.cpp  SnesController.h  XboxController.h
arduino/: TEENSY_README.txt
configs/: PS4_to_ATARI_2600.txt  PS4_to_ATARI_7800.txt  PS4_to_GEN.txt  PS4_to_NES.txt  PS4_to_SMS.txt  PS4_to_SNES.txt  Ps4To2600Config.txt  Ps4ToGenConfig.txt  Ps4ToSnesConfig.txt  XB1_to_ATARI_2600.txt  XB1_to_ATARI_7800.txt  XB1_to_GEN.txt  XB1_to_NES.txt  XB1_to_SMS.txt  XB1_to_SNES.txt  XboxTo2600Config.txt  XboxTo7800Config.txt  XboxToGenConfig.txt
main/: CMakeLists.txt  GENESIS_IMPLEMENTATION.c  converter.cpp  esp_hid_host_main.cpp  esp_hid_host_main.h  retroconnect.c  retroconnect.cpp
main/ControllerModels/: Controller.h
main/ControllerModels/Input/: Ps4Controller.h  XboxController.h
main/ControllerModels/Output/: Atari2600Controller.h  Atari7800Controller.h  GenController.h  NesController.h  SmsController.h  SnesController.h
main/include/: Constants.h  Converter.h  ConverterFactory.h
src/: Constants.h  converter.cpp  main.cpp
(+80 files in other folders)
